[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/BisonButton.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Camera2D.tscn" type="PackedScene" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 793.0
margin_top = 857.0
margin_right = 2282.0
margin_bottom = 1689.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1489.0
margin_bottom = 480.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 484.0
margin_right = 1489.0
margin_bottom = 832.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1489.0
margin_bottom = 348.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGame" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 114.0
margin_right = 1489.0
margin_bottom = 234.0
rect_min_size = Vector2( 360, 120 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGame"]
margin_left = 24.0
margin_top = -8.0
margin_right = 344.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="Menu" instance=ExtResource( 4 )]
position = Vector2( 931.781, 512 )
rotation = -1.5708
inGame = false

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 1536.99, 1273.93 )
zoom = Vector2( 0.8, 0.8 )
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
